View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023529 | Community | OCCT:Visualization | public | 2012-11-08 18:30 | 2013-04-29 15:21 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2005 | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023529: Uninitialized variable: aSurfType - AIS_DiameterDimension.cxx , line 339 | ||||
Description | A customized action is taken only if 'aSurfType == AIS_KOS_Plane', so it is probably enough to initialize the variable as AIS_KOS_OtherSurface. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR23529 pushed. Please review. |
|
Branch CR23529 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR23529 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: Not needed |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-11-08 18:30 | Pawel | New Issue | |
2012-11-08 18:30 | Pawel | Assigned To | => Pawel |
2012-11-09 13:33 | Pawel | Note Added: 0022174 | |
2012-11-09 13:33 | Pawel | Assigned To | Pawel => bugmaster |
2012-11-09 13:33 | Pawel | Status | new => resolved |
2012-11-22 10:27 | bugmaster | Assigned To | bugmaster => san |
2012-12-14 19:01 |
|
Note Added: 0022712 | |
2012-12-14 19:01 |
|
Assigned To | san => bugmaster |
2012-12-14 19:01 |
|
Status | resolved => reviewed |
2012-12-14 19:23 |
|
Assigned To | bugmaster => mkv |
2012-12-17 18:23 |
|
Note Added: 0022734 | |
2012-12-17 18:23 |
|
Test case number | => Not needed |
2012-12-17 18:23 |
|
Assigned To | mkv => bugmaster |
2012-12-17 18:23 |
|
Status | reviewed => assigned |
2012-12-17 18:23 |
|
Status | assigned => resolved |
2012-12-17 18:24 |
|
Status | resolved => reviewed |
2012-12-17 18:24 |
|
Status | reviewed => tested |
2012-12-24 17:23 | Pawel | Changeset attached | => occt master f5a6ee3c |
2012-12-24 17:23 | Pawel | Assigned To | bugmaster => Pawel |
2012-12-24 17:23 | Pawel | Status | tested => verified |
2012-12-24 17:23 | Pawel | Resolution | open => fixed |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:21 |
|
Fixed in Version | => 6.6.0 |