0023529: Uninitialized variable: aSurfType - AIS_DiameterDimension.cxx , line 339

Initialized the variable 'aSurfType'.